<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_baseline_arrow_back_24">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/Pingal"
                android:textColor="@android:color/white"
                android:textSize="24sp">

            </TextView>

        </LinearLayout>


    </FrameLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="10dp"
        android:text="Verify Mobile Number"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_below="@id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="Enter OTP sent to 90948984" />

    <EditText
        android:id="@+id/editTextOTP"
        android:layout_below="@id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:paddingBottom="24dp"
        android:inputType="textPersonName"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextOTP"

        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/not_receive_otp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/otp_on_call" />




    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        app:cardBackgroundColor="@color/titleColor"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"


        >


        <TextView
            android:layout_width="wrap_content"

            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/verify_continue"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            >

        </TextView>



    </androidx.cardview.widget.CardView>

</LinearLayout>