<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/headerFrame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_baseline_arrow_back_24">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/menu_calling"
                android:textColor="@android:color/white"
                android:textSize="24sp">

            </TextView>

        </LinearLayout>


    </FrameLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/headerFrame"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"

        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/call"
            app:srcCompat="@drawable/calling_back">

        </ImageView>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/no_pingal_calling"
            android:textColor="@color/titleColor"
            android:textSize="16sp" />


    </LinearLayout>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/titleColor"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:text="@string/unsubscribe"
      android:textColor="@android:color/white"

      android:layout_alignParentRight="true" />




</RelativeLayout>